--- a/content.tex
+++ b/content.tex
@@ -7,12 +7,12 @@
 \begin{itemize}
     \item so many people suffer from back problems...: 
     \begin{itemize}
-        \item 60\% - 90\% of people will suffer from low back disorders at some point in their life \cite{osha2000facts}
-        \item 30\% of European workers suffer from back pain \cite{osha2000facts}
-        \item back pain tops the list of all reported work-related disorders \cite{osha2000facts}
+        \item 60\% - 90\% of people will suffer from low back disorders at some point in their life~\cite{osha2000facts}
+        \item 30\% of European workers suffer from back pain~\cite{osha2000facts}
+        \item back pain tops the list of all reported work-related disorders~\cite{osha2000facts}
     \end{itemize}
-    \item so many people work on laptops/computer on a daily basis: 57 \% of all employees in EU use computers at their workplace (2019) \cite{eurostat_comp_use}
-    \item "Exposure to ergonomic risks factors represents one of the major occupational safety and health problems in the EU today. Repeated exposure to these risks can result in work-related musculoskeletal disorders — one of the most serious and widespread work-related illnesses, which give rise to major cost burden for individuals, businesses and society in general." \cite{osha2019msd}
+    \item so many people work on laptops/computer on a daily basis: 57 \% of all employees in EU use computers at their workplace (2019)~\cite{eurostat_comp_use}
+    \item "Exposure to ergonomic risks factors represents one of the major occupational safety and health problems in the EU today. Repeated exposure to these risks can result in work-related musculoskeletal disorders — one of the most serious and widespread work-related illnesses, which give rise to major cost burden for individuals, businesses and society in general."~\cite{osha2019msd}
 \end{itemize}
 %%% Problemanalyse
 
@@ -72,7 +72,7 @@ Researchers have used different metrics to identify various relevant aspects in 
 
 \subsection{Study Tasks} % in progress
 \label{us1-tasks}
-We defined three phases within the user study. Phase one should give the participants an overview of the features BodyPose and should encourage to explore them on their own. As BodyPose is designed for background usage, phase two simulates an every day's work task. Lastly, the participants are invited to fill in a survey consisting of two questionnaires in order to ask for feedback regarding personal information as well as user experience and subjective perception of the study task itself.
+We defined three phases within the user study. Phase one should give the participants an overview of the features BodyPose and should encourage to explore them on their own. As BodyPose is designed for background usage, phase two simulates every day's work task. Lastly, the participants are invited to fill in a survey consisting of two questionnaires in order to ask for feedback regarding personal information as well as user experience and subjective perception of the study task itself.
 \begin{description}
 
 \item[Task A]
@@ -115,7 +115,7 @@ We utilised an extended version of the NASA-TLX~\cite{hart2006nasa} to collect q
 \begin{figure}[hbp]
 \centering
 \includegraphics[width=\linewidth]{media/us-gs-shortterm-motivation-results.png}    
-\caption{Results Shortterm Motivation, N=3}
+\caption{Short-term motivation}
 \label{fig:us-gs-shortterm}
 \end{figure}
 
@@ -124,7 +124,7 @@ We utilised an extended version of the NASA-TLX~\cite{hart2006nasa} to collect q
 \begin{figure}[hbp]
 \centering
 \includegraphics[width=\linewidth]{media/us-gs-longterm-motivation-results.png}    
-\caption{Results Longterm Motivation, N=3}
+\caption{Long-term motivation}
 \label{fig:us-gs-longterm}
 \end{figure}
 
@@ -135,7 +135,7 @@ We utilised an extended version of the NASA-TLX~\cite{hart2006nasa} to collect q
 \begin{figure}[hbp]
 \centering
 \includegraphics[width=\linewidth]{media/us-ext-nasa-tlx-results.png}    
-\caption{Results Extended NASA TLX Survey, N=3}
+\caption{Bar charts regarding workload, sense of control and creativity support}
     \label{fig:ext-nasa-results}
 \end{figure}
 
@@ -147,7 +147,7 @@ We utilised an extended version of the NASA-TLX~\cite{hart2006nasa} to collect q
 
 
 \subsection{User Study Procedure}
-As only three participants took part in our user study, the results shown in \ref{us1-data-analysis-results} are statistically not representative. Furthermore, execution of the user study did not strictly follow the study protocol described in \ref{us1-procedure}: Since our participants were aware they were being observed not only by us, but also by our mentors and colleagues, their behaviour might also not have been representative. Additionally, participants were not isolated from each other, so they did not perform their tasks independently. Lastly, since we recruited the participants from amongst our co-students, it can not be ruled out that personal bias(es) might have had an influence on the result.
+As only three participants took part in our user study, the results shown in \ref{us1-data-analysis-results} are statistically not representative. Furthermore, execution of the user study did not strictly follow the study protocol described in \ref{us1-procedure}: Since our participants were aware they were being observed not only by us but also by our mentors and colleagues, their behaviour might also not have been representative. Additionally, participants were not isolated from each other, so they did not perform their tasks independently. Lastly, since we recruited the participants from amongst our co-students, it can not be ruled out that personal bias(es) might have influenced the result.
 % It should be noted, however, that this study is considered to be a test run. To gain reliable results and insights, a higher number of participants, as well as a more controlled and isolated setup are required.
 
 %%%
@@ -161,7 +161,7 @@ As only three participants took part in our user study, the results shown in \re
 \begin{itemize}
     \item let model learn rule-based system
 \end{itemize}
-There are several potential future avenues worth pursuing in order to enhance and improve the functionality of BodyPose: To allow for a more personalised user experience, users should be able to create an account and save not only their settings (such as threshold values), but also calibration and session data (such as statistics). Furthermore, implementing a user identification system via face detection might prove helpful for robustness: since BodyPose uses PoseNet's single-pose detection algorithm, the system can not handle situations robustly where multiple persons are visible to the camera. Identifying users with face detection could mitigate this problem, as the system could be modified to only evaluate the pose of persons who can be identified as the currently logged in user. Another avenue for improving robustness, as well as accuracy, lies in replacing the pose detection model itself: PoseNet detects poses in two dimensions, but there are also models that can detect poses in three dimensions, even from two-dimensional input, such as in \cite{Arnab_2019}. This model shows improved robustness and accuracy when compared to two-dimensional pose detection. However, due to the added complexity, this could potentially result in a trade-off regarding performance.
+There are several potential future avenues worth pursuing in order to enhance and improve the functionality of BodyPose: To allow for a more personalised user experience, users should be able to create an account and save not only their settings (such as threshold values) but also calibration and session data (such as statistics). Furthermore, implementing a user identification system via face detection might prove helpful for robustness: since BodyPose uses PoseNet's single-pose detection algorithm, the system can not handle situations robustly where multiple persons are visible to the camera. Identifying users with face detection could mitigate this problem, as the system could be modified only to evaluate the pose of persons who can be identified as the currently logged in user. Another avenue for improving robustness, as well as accuracy, lies in replacing the pose detection model itself: PoseNet detects poses in two dimensions, but some models can detect poses in three dimensions, even from two-dimensional input, such as in \cite{Arnab_2019}. This model shows improved robustness and accuracy when compared to two-dimensional pose detection. However, due to the added complexity, this could potentially result in a trade-off regarding performance.
 
 \appendix
 %Appendix A
