Remove unused pkgs, switch to manuscript mode

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,8 @@
 % LATEX Class for the Association for Computing Machinery
 % https://www.acm.org/binaries/content/assets/publications/consolidated-tex-template/acmart.pdf
 %%%%
-\documentclass[sigplan, review]{acmart}
+\documentclass[sigchi, timestamp, manuscript, screen]{acmart}
+% \documentclass[sigchi]{acmart}
 
 %%%%
 % To use the SIGCHI extended abstract template, please visit
@@ -18,12 +19,8 @@
 % What packages do people load by default in LaTeX?
 % https://tex.stackexchange.com/questions/553/what-packages-do-people-load-by-default-in-latex
 %%%%
-\usepackage{hyperref}
 \usepackage{cleveref}
-\usepackage{microtype} % refinements towards typographical
 \usepackage{subcaption}
-\usepackage{booktabs} % For formal tables
-\usepackage{lipsum} % For placeholder text
 
 %%%%
 % CUSTOMISE ACMART DESIGN
@@ -38,7 +35,7 @@
 
 \begin{document}
 
-\title[BodyPose - Break Slouching Habits of the Digital Age]{BodyPose - Break Slouching Habits of the Digital Age:\\ Design and Evaluation of a Pose Monitoring Concept}
+\title[BodyPose - Break Slouching Habits of the Digital Age]{BodyPose - Break Slouching Habits of the Digital Age: Design and Evaluation of a Pose Monitoring Concept}
 
 % AUTHOR
 \author{Andreas Ellwanger}
@@ -81,7 +78,7 @@
 % ABSTRACT
 %%%%
 \begin{abstract}
-\lipsum[2-3]
+tbd
 \end{abstract}
 
 %%%%
