--- a/content.tex
+++ b/content.tex
@@ -104,7 +104,7 @@ Please follow the given instructions while BodyPose is activated.
 \subsection{Procedure}
 \label{us1-procedure}
 In beforehand we prepared three of our already tested devices by launching a browser with BodyPose and both questionnaires.
-The participants were instructed to use BodyPose according to the in \ref{us1-tasks} described tasks and fill in the given surveys. There were no time constraints given as well as no signal to when to proceed to the next task, as we wanted to keep the focus of the participants on exploring freely.
+The participants were instructed to use BodyPose according to the in \ref{us1-tasks} described tasks and fill in the given surveys. There were no time constraints given as well as no signal to when to proceed to the next task, as we wanted to keep the focus of the participants on exploring BodyPose freely.
   
 
 \subsection{Participants}
@@ -112,9 +112,12 @@ The participants were instructed to use BodyPose according to the in \ref{us1-ta
 In this test study, our fellow computer sciences colleagues participated. Two of them were male, one female and their average age was 24, ranging from 23 to 27.
 
 
-\subsection{Data Analysis and Results} % in progress
+\subsection{Data Analysis and Results}
 \label{us1-data-analysis-results}
-<As shown in \ref{fig:us-gs-shortterm}, bodypose motivates probands to adjust their posture if app detects misalignment.> 
+Evaluating both questionnaires described in \ref{us1-measurements}, we gathered various insights.
+Firstly, it can be seen in \ref{fig:us-gs-shortterm}, that all participants felt motivated to correct their body posture immediately when BodyPose notified them having slouched into an unhealthy alignment.
+Furthermore, as the chart in \ref{fig:us-gs-longterm} depicts, all participants stated, that BodyPose encourages them to increase their emphasis on being aware of their body posture.
+And lastly, the results of the extended NASA TLX questionnaire, as shown in \ref{fig:ext-nasa-results}, state, that the participants rated the workload intensity at 43\% with a standard deviation of 5,4\%. Furthermore they felt in sense of control during the task to 62\% with a with a standard deviation of 13\%. Lastly, they classified their subjective perception of creativity support at 71\% with a standard deviation of 12\%.
 
 \begin{figure}[hbp]
 \centering
@@ -123,18 +126,12 @@ In this test study, our fellow computer sciences colleagues participated. Two of
 \label{fig:us-gs-shortterm}
 \end{figure}
 
-<As shown in \ref{fig:us-gs-longterm}, bodypose seems to increase motivation in participants to take care of their posture in longterm.>
-
 \begin{figure}[hbp]
 \centering
 \includegraphics[width=\linewidth]{media/us-gs-longterm-motivation-results.png}    
 \caption{Long-term motivation}
 \label{fig:us-gs-longterm}
 \end{figure}
-
-
-- graph: results extended NASA-tlx study
-<As shown in \ref{fig:ext-nasa-results}, probands felt [...] while executing user study task>
 
 \begin{figure}[hbp]
 \centering
